# ghostpost_backend

./: README.md  db.sqlite3  pyproject.toml
ghostpost/: settings.py  urls.py
homepage/: admin.py  models.py  serializer.py  views.py
homepage/migrations/: 0001_initial.py  0002_auto_20201002_2351.py  0003_auto_20201002_2352.py  0004_auto_20201002_2356.py
